--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
                <div class="navbar__bottom">
                    <ul class="navbar__list">
                        <li>
-                           <a href="#" class="navbar__link">
+                           <a href="#home" class="navbar__link">
                             Home  
                            </a>
                        </li>
                        <li>
-                        <a href="#" class="navbar__link">
+                        <a href="#about" class="navbar__link">
                             About
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar__link">
+                        <a href="#service" class="navbar__link">
                             Service
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar__link">
+                        <a href="#property" class="navbar__link">
                             Property
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar__link">
+                        <a href="#blog" class="navbar__link">
                             Blog
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="navbar__link">
+                        <a href="#contact" class="navbar__link">
                             Contact
                         </a>
                     </li>
@@ -155,7 +155,7 @@
            </section>
           <section class="section__about">
                <div class="container">
-                   <div class="about">
+                   <div class="about" id="about">
                       <div class="about__banner">
                           <img src="./assets/images/about-banner-1.png" alt=" House interior">
                       </div> 
@@ -717,7 +717,7 @@
                    <h2 class="section__title center">
                     Leatest News Feeds
                    </h2>
-                   <div class="blogs  ">
+                   <div class="blogs" id="blog">
                         <div class="blogs__item">
                             <figure class="blogs__item-banner">
                                 <img class="blogs__item-img" src="./assets/images/blog-1.png" alt="blog1">
@@ -844,7 +844,7 @@
    </main>
   
  <footer class="footer"> 
-         <div class="footer__top">
+         <div class="footer__top" id="contact">
              <div class="container">
                  <div class="footer__top-inner">
                      <div class="footer__brand">
