--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             </div>
 
            </section>
-          <section class="section__about">
+          <section class="section__about" id="about">
                <div class="container">
-                   <div class="about" id="about">
+                   <div class="about" >
                       <div class="about__banner">
                           <img src="./assets/images/about-banner-1.png" alt=" House interior">
                       </div> 
@@ -709,7 +709,7 @@
                    </div>
                </div>
            </section>
-           <section class="section__blogs">
+           <section class="section__blogs"  id="blog">
                <div class="container">
                    <p class="section__subtitle margin">
                     News & Blogs
@@ -717,7 +717,7 @@
                    <h2 class="section__title center">
                     Leatest News Feeds
                    </h2>
-                   <div class="blogs" id="blog">
+                   <div class="blogs">
                         <div class="blogs__item">
                             <figure class="blogs__item-banner">
                                 <img class="blogs__item-img" src="./assets/images/blog-1.png" alt="blog1">
